--- a/bankingApp.html
+++ b/bankingApp.html
@@ -39,7 +39,7 @@
             <div class="card-body">
           
                 <div>
-                    <h5 class="card-title p-3"><u><b>Wellcome to Banking Enqury</b></u></h5>
+                    <h5 class="card-title p-3"><u><b>Welcome to Banking Enquiry</b></u></h5>
                     <h6 class="card-subtitle mb-4 text-muted p-4" id="">Your Account Balance is <span id="accBalance">0 Rs.</span></h6>
                    <div class="row">
                        <div class="col-sm-4">
